# python-genai

./: .gitignore  CHANGELOG.md  README.md  codegen_instructions.md  pyproject.toml  requirements.txt
.github/: release-please.yml
.github/workflows/: import.yml  mypy.yml  stale.yml
docs/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: genai.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/css/: custom.css
google/genai/: __init__.py  _adapters.py  _api_client.py  _automatic_function_calling_util.py  _common.py  _extra_utils.py  _live_converters.py  _mcp_utils.py  _operations.py  _replay_api_client.py  _tokens_converters.py  _transformers.py  batches.py  caches.py  chats.py  client.py  errors.py  files.py  live.py  live_converters.py  models.py  mypy.ini  operations.py  pagers.py  tokens.py  tunings.py  types.py  version.py
google/genai/tests/: __init__.py  conftest.py  credentials.json  pytest_helper.py
google/genai/tests/afc/: __init__.py  test_automatic_function_calling_util.py  test_convert_if_exist_pydantic_model.py  test_convert_number_values_for_function_call_args.py  test_function_declaration_from_function.py  test_generate_content_stream_afc.py  test_get_function_map.py  test_get_function_response_parts.py  test_get_max_remote_calls_for_afc.py  test_invoke_function_from_dict_args.py  test_should_append_afc_history.py  test_should_disable_afc.py
google/genai/tests/batches/: __init__.py  test_cancel.py  test_create.py  test_create_with_bigquery.py  test_create_with_file.py  test_create_with_gcs.py  test_create_with_inlined_requests.py  test_delete.py  test_get.py  test_list.py
google/genai/tests/caches/: __init__.py  constants.py  test_create.py  test_create_custom_url.py  test_delete.py  test_delete_custom_url.py  test_get.py  test_get_custom_url.py  test_list.py  test_update.py  test_update_custom_url.py
google/genai/tests/chats/: test_get_history.py  test_send_message.py  test_send_message_thought.py  test_validate_response.py
google/genai/tests/client/: __init__.py  test_client_initialization.py  test_client_requests.py  test_http_options.py  test_json_encoder.py  test_retries.py
google/genai/tests/common/: test_common.py
google/genai/tests/data/: pixel.m4a  story.txt
google/genai/tests/errors/: test_api_error.py
google/genai/tests/files/: __init__.py  test_delete.py  test_download.py  test_get.py  test_list.py  test_upload.py
google/genai/tests/live/: test_live.py  test_live_music.py  test_live_response.py  test_send_client_content.py  test_send_realtime_input.py  test_send_tool_response.py
google/genai/tests/mcp/: test_parse_config_for_mcp_tools.py  test_set_mcp_usage_header.py
google/genai/tests/models/: __init__.py  (+27 more)
(+26 files in other folders)
